--- a/ai_assignment/code.ipynb
+++ b/ai_assignment/code.ipynb
@@ -11,18 +11,17 @@
     "import glob\n",
     "\n",
     "from cv2 import destroyAllWindows\n",
-    "\n",
-    "image_path = \"/home/ngtuetam/workspace/ai_assignment/dataset\"\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "cv_img_orange = []\n",
-    "for img in glob.glob(\"/home/ngtuetam/workspace/ai_assignment/dataset/orange/*.jpg\"):\n",
+    "for img in glob.glob(\"/home/ngtuetam/workspace/ai_assign/ai_assignment/dataset/orange/*.jpg\"):\n",
     "    n = cv.imread(img)\n",
     "    cv_img_orange.append(n)\n",
     "cv.imshow('Grayscale', cv_img_orange[1])\n",
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +43,113 @@
     "cv.imshow('Grayscale', cv_img_orange_gray[1])\n",
     "cv.waitKey(0) \n",
     "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0, len(cv_img_orange_gray)):\n",
+    "    cv.imwrite(f'/home/ngtuetam/workspace/ai_assign/ai_assignment/orange_gray/image_{i}.png',cv_img_orange_gray[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_img_straw = []\n",
+    "for img in glob.glob(\"/home/ngtuetam/workspace/ai_assign/ai_assignment/dataset/strawberry/*.jpg\"):\n",
+    "    n = cv.imread(img)\n",
+    "    cv_img_straw.append(n)\n",
+    "cv.imshow('Grayscale', cv_img_straw[1])\n",
+    "cv.waitKey(0) \n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_img_straw_gray = []\n",
+    "for img in cv_img_straw:\n",
+    "    img_gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "    cv_img_straw_gray.append(img_gray)\n",
+    "for i in range(0, len(cv_img_straw_gray)):\n",
+    "    cv.imwrite(f'/home/ngtuetam/workspace/ai_assign/ai_assignment/straw_gray/image_{i}.png',cv_img_straw_gray[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (thresh, im_bw) = cv.threshold(cv_img_straw_gray[1], 128, 255, cv.THRESH_BINARY | cv.THRESH_OTSU)\n",
+    "# cv.imshow('Grayscale', np.abs(255-im_bw))\n",
+    "# cv.waitKey(0) \n",
+    "# cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 255}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set(list(im_bw.reshape(-1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_img_straw_bin_1 = []\n",
+    "for img in cv_img_straw_gray:\n",
+    "    (thresh, im_bw) = cv.threshold(img, 128, 255, cv.THRESH_BINARY | cv.THRESH_OTSU)\n",
+    "    cv_img_straw_bin_1.append(np.abs(255-im_bw))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0, len(cv_img_straw_bin_1)):\n",
+    "    cv.imwrite(f'/home/ngtuetam/workspace/ai_assign/ai_assignment/straw_bin1/image_{i}.jpg',cv_img_straw_bin_1[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_img_orange_bin = []\n",
+    "for img in cv_img_orange_gray:\n",
+    "    (thresh, im_bw) = cv.threshold(img, 128, 255, cv.THRESH_BINARY | cv.THRESH_OTSU)\n",
+    "    cv_img_orange_bin.append(np.abs(255-im_bw))\n",
+    "for i in range(0, len(cv_img_orange_bin)):\n",
+    "    cv.imwrite(f'/home/ngtuetam/workspace/ai_assign/ai_assignment/orange_bin/image_{i}.jpg',cv_img_orange_bin[i])"
    ]
   },
   {
